2009-02-28  Christian Dywan  <christian@twotoasts.de>

        Rubber-stamped by Holger Freyther.

        * GtkLauncher/main.c:
        (activate_uri_entry_cb):
        (main): Use the new webkit_web_view_load_uri to open URIs.

2009-02-27  Xan Lopez  <xan@gnome.org>

        Rubber-stamped by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24222
        [GTK] Remove checks for old glib versions

        libsoup, which is a hard dependency, needs at least glib 2.15.3,
        so remove all glib checks for versions older than that.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setWaitToDump):

2009-02-25  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Eric Seidel

        Fix spew about a WebView being deallocated while key value observers are
        still registered with it by making sure that we always stop observing
        _isUsingAcceleratedCompositing in -[DumpRenderTreeWindow close].
        
        * DumpRenderTree/mac/DumpRenderTree.mm:
        (dumpRenderTree):
        * DumpRenderTree/mac/DumpRenderTreeWindow.mm:
        (-[DumpRenderTreeWindow close]):

2009-02-25  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Alexey Proskuryakov.

        Do not queue the calls to 'DumpRenderTree::dump()' as this can result
        in more than one call as a test that calls 'notifyDone()' can then be
        subsequently fully loaded and initiate a second dump.  Also make sure
        to stop any existing page load that is happening before running the next
        test.  Combined this serves to produce 217 more passing tests for the
        Qt port or roughly 5% at this point.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::open):

2009-02-25  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=23854
